Bug 14426 - log level for debug classes is ignored
Summary: log level for debug classes is ignored
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: 4.12.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-30 15:20 UTC by Ralph Böhme
Modified: 2020-07-17 09:36 UTC (History)
1 user (show)

See Also:


Attachments
WIP patch for master (2.75 KB, patch)
2020-06-30 19:36 UTC, Ralph Böhme
no flags Details
Patch for 4.11 and 4.12 cherry-picked from master (3.21 KB, patch)
2020-07-03 09:12 UTC, Ralph Böhme
asn: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2020-06-30 15:20:37 UTC
The fix for bug #14345 broke setting debug class loglevels.

Have patch, need bugnumber.
Comment 1 Ralph Böhme 2020-06-30 19:36:00 UTC
Created attachment 16101 [details]
WIP patch for master

Working on a test...
Comment 2 Ralph Böhme 2020-07-03 09:12:16 UTC
Created attachment 16111 [details]
Patch for 4.11 and 4.12 cherry-picked from master

Karolin, the patch for 4.11 has the bugfix for #14345 as prerequisite.
Comment 3 Andreas Schneider 2020-07-03 13:22:48 UTC
Comment on attachment 16111 [details]
Patch for 4.11 and 4.12 cherry-picked from master

LGTM
Comment 4 Ralph Böhme 2020-07-03 13:57:19 UTC
Reassigning to Karolin for inclusion in 4.11 and 4.12.
Comment 5 Karolin Seeger 2020-07-09 07:42:34 UTC
(In reply to Ralph Böhme from comment #4)
Pushed to autobuild-v4-12-test.
Does not apply on current v4-11-test.
Re-assigning to Ralph.
Comment 6 Karolin Seeger 2020-07-09 09:56:20 UTC
(In reply to Karolin Seeger from comment #5)
Pushed to autobuild-4-11-test.
Comment 7 Karolin Seeger 2020-07-17 09:36:26 UTC
(In reply to Karolin Seeger from comment #6)
Pushed to all branches.
Closing out bug report.

Thanks!